<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/toolbarDownButtonDelete"
        android:contentDescription="@string/content_description_delete"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/delete"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/toolbarDownButtonShare"
        android:contentDescription="@string/content_description_share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>
</menu>